--- a/src/components/footer/footer.scss
+++ b/src/components/footer/footer.scss
@@ -1,3 +1,14 @@
-.menu-item {
-    font-family: 'Merienda', cursive;
+.beans-footer {
+    display: block;
+    width: 200px;
+    height: 30px;
+
+    margin: 20px auto 20px auto;
+    padding: 0;
+}
+
+
+.footer > .main-menu {
+    margin: 30px auto 0 auto;
+    width: fit-content;   
 }
