--- a/src/components/header/header.scss
+++ b/src/components/header/header.scss
@@ -1,4 +1,4 @@
-.header {
+.header-main {
     background: url('../../imgs/main-bg.jpg');
     background-size: 100% ;
     color: #FFFFFF; 
@@ -61,5 +61,28 @@
     
         margin: 15px auto 15px auto;
     }
+}
+
+.header {
+    background: url('../../imgs/shop.png');
+    background-size: 100%;
+    height: 260px;
+
+    color: #FFFFFF; 
+    overflow: hidden;
+    text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+    
+    h1 {
+        text-align: center;
+        margin: auto;      
+        
+        font-size: 40px;
+        line-height: 58px; 
+    }
+    
+    .main-menu {
+        margin: 30px auto 60px 10%;
+        width: fit-content;
+    }  
 
 }
