finish the project

--- a/src/components/about/about.scss
+++ b/src/components/about/about.scss
@@ -1,4 +1,4 @@
-.about {        
+.about {   
     .beans {
         display: block; 
         margin: 20px auto 0 auto;
@@ -12,6 +12,13 @@
     }  
 }
 
+.left-field {
+    width: 400px;
+}
+.right-field {
+    width: 400px;
+}
+
 .about-us {
     h2 {
         padding: 80px 0 0 0;
@@ -20,33 +27,56 @@
         width: 589px;
     }      
 }
-.about-our-beans {
+
+.about-two-columns {
+
     margin: 70px auto 60px auto;
     width: 800px;
     display: grid;
     grid-template-columns: auto auto;
     grid-gap: 0;
-    text-align: center;  
     
     .girl {
         display: block; 
         margin: 0 auto 0 auto;
-    }    
+    } 
 
     h2 {
         padding: 10px 0 0 0;   
     }
-
     p {
         width: 346px;
-    } 
+    }
 }
 
-.left-field {
-    // border: solid 1px  grey;
-    width: 400px;
+.about-our-beans {
+    text-align: center;  
 }
-.right-field {
-    // border: solid 1px rgb(194, 85, 85);
-    width: 400px;
+.about-coffe-item {
+
+    .beans {
+        margin: 20px auto 0 173px;
+    }
+
+    h2 { 
+        padding-left: 122px;
+    }
+
+    p {
+        width: 418px;
+        text-align: left;
+        margin: 16px auto 0 55px;  
+    } 
+
+    .paragraphs>:first-child {
+            margin: 26px auto 0 55px; 
+    }
+
+    span {
+        font-weight: normal;
+        font-size: 24px;
+        line-height: 35px;
+        margin-left: 8px;
+    }
+
 }
