--- a/src/components/coffee-list/coffee-list.scss
+++ b/src/components/coffee-list/coffee-list.scss
@@ -34,6 +34,8 @@
     grid-gap: 70px;
     padding: 40px 320px 110px 320px;
     text-align: center;
+
+    min-height: 260px;
 }
 .coffee-item {
     width: 220px;
